Archive2/18/e43c3c3d50c662/output
main.cpp:7:43: error: invalid operands to binary expression ('basic_ostream<char, std::__1::char_traits<char> >' and 'ostream' (aka 'basic_ostream<char>'))
  cout << "my_test_function is working\n" << cout << endl;
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^  ~~~~
/usr/include/c++/v1/ostream:191:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'const void *' for 1st argument; take the address of the argument with &
    basic_ostream& operator<<(const void* __p);
                   ^
/usr/include/c++/v1/ostream:175:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'std::__1::basic_ostream<char> &(*)(std::__1::basic_ostream<char> &)' for 1st argument
    basic_ostream& operator<<(basic_ostream& (*__pf)(basic_ostream&));
                   ^
/usr/include/c++/v1/ostream:176:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'basic_ios<char_type, traits_type> &(*)(basic_ios<char_type, traits_type> &)' for 1st argument
    basic_ostream& operator<<(basic_ios<char_type, traits_type>&
                   ^
/usr/include/c++/v1/ostream:178:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'std::__1::ios_base &(*)(std::__1::ios_base &)' for 1st argument
    basic_ostream& operator<<(ios_base& (*__pf)(ios_base&));
                   ^
/usr/include/c++/v1/ostream:179:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'bool' for 1st argument
    basic_ostream& operator<<(bool __n);
                   ^
/usr/include/c++/v1/ostream:180:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'short' for 1st argument
    basic_ostream& operator<<(short __n);
                   ^
/usr/include/c++/v1/ostream:181:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'unsigned short' for 1st argument
    basic_ostream& operator<<(unsigned short __n);
                   ^
/usr/include/c++/v1/ostream:182:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'int' for 1st argument
    basic_ostream& operator<<(int __n);
                   ^
/usr/include/c++/v1/ostream:183:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'unsigned int' for 1st argument
    basic_ostream& operator<<(unsigned int __n);
                   ^
/usr/include/c++/v1/ostream:184:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'long' for 1st argument
    basic_ostream& operator<<(long __n);
                   ^
/usr/include/c++/v1/ostream:185:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'unsigned long' for 1st argument
    basic_ostream& operator<<(unsigned long __n);
                   ^
/usr/include/c++/v1/ostream:186:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'long long' for 1st argument
    basic_ostream& operator<<(long long __n);
                   ^
/usr/include/c++/v1/ostream:187:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'unsigned long long' for 1st argument
    basic_ostream& operator<<(unsigned long long __n);
                   ^
/usr/include/c++/v1/ostream:188:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'float' for 1st argument
    basic_ostream& operator<<(float __f);
                   ^
/usr/include/c++/v1/ostream:189:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'double' for 1st argument
    basic_ostream& operator<<(double __f);
                   ^
/usr/include/c++/v1/ostream:190:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'long double' for 1st argument
    basic_ostream& operator<<(long double __f);
                   ^
/usr/include/c++/v1/ostream:192:20: note: candidate function not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'basic_streambuf<char_type, traits_type> *' for 1st argument
    basic_ostream& operator<<(basic_streambuf<char_type, traits_type>* __sb);
                   ^
/usr/include/c++/v1/ostream:760:1: note: candidate function [with _CharT = char, _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'char' for 2nd argument
operator<<(basic_ostream<_CharT, _Traits>& __os, char __cn)
^
/usr/include/c++/v1/ostream:793:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'char' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, char __c)
^
/usr/include/c++/v1/ostream:825:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'signed char' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, signed char __c)
^
/usr/include/c++/v1/ostream:857:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'unsigned char' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, unsigned char __c)
^
/usr/include/c++/v1/ostream:922:1: note: candidate function [with _CharT = char, _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'const char *' for 2nd argument
operator<<(basic_ostream<_CharT, _Traits>& __os, const char* __strn)
^
/usr/include/c++/v1/ostream:968:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'const char *' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, const char* __str)
^
/usr/include/c++/v1/ostream:1001:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'const signed char *' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, const signed char* __str)
^
/usr/include/c++/v1/ostream:1034:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'const unsigned char *' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, const unsigned char* __str)
^
/usr/include/c++/v1/ostream:1259:1: note: candidate function [with _CharT = char, _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'ostream' (aka 'basic_ostream<char>') to 'const std::__1::error_code' for 2nd argument
operator<<(basic_ostream<_CharT, _Traits>& __os, const error_code& __ec)
^
/usr/include/c++/v1/ostream:728:1: note: candidate template ignored: deduced conflicting types for parameter '_CharT' ('char' vs. 'std::__1::basic_ostream<char>')
operator<<(basic_ostream<_CharT, _Traits>& __os, _CharT __c)
^
/usr/include/c++/v1/ostream:1210:5: note: candidate template ignored: disabled by 'enable_if' [with _Stream = std::__1::basic_ostream<char> &, _Tp = std::__1::basic_ostream<char>]
    !is_lvalue_reference<_Stream>::value &&
    ^
/usr/include/c++/v1/ostream:889:1: note: candidate template ignored: could not match 'const _CharT *' against 'ostream' (aka 'basic_ostream<char>')
operator<<(basic_ostream<_CharT, _Traits>& __os, const _CharT* __str)
^
/usr/include/c++/v1/ostream:1224:1: note: candidate template ignored: could not match 'basic_string' against 'basic_ostream'
operator<<(basic_ostream<_CharT, _Traits>& __os,
^
/usr/include/c++/v1/ostream:1267:1: note: candidate template ignored: could not match 'shared_ptr' against 'basic_ostream'
operator<<(basic_ostream<_CharT, _Traits>& __os, shared_ptr<_Yp> const& __p)
^
/usr/include/c++/v1/ostream:1274:1: note: candidate template ignored: could not match 'bitset' against 'basic_ostream'
operator<<(basic_ostream<_CharT, _Traits>& __os, const bitset<_Size>& __x)
^
1 error generated.
